# vsensor

./: CMakeLists.txt  LICENSE  README.md
include/vsensor/: ITemperatureSource.hpp  ITransport.hpp  MQTTTransport.hpp  SimulatedTemperatureSource.hpp  TemperatureSensor.hpp
include/vsensor/cli/: CliParser.hpp
include/vsensor/core/: ISensor.hpp  ITransport.hpp  Registry.hpp
include/vsensor/factories/: ISensorFactory.hpp  ITransportFactory.hpp  MQTTTransportFactory.hpp  TemperatureSensorFactory.hpp
include/vsensor/sensors/: SimulatedTemperatureSource.hpp  TemperatureSensor.hpp
include/vsensor/transport/: MQTTTransport.hpp
src/: MQTTTransport.cpp  SimulatedTemperatureSource.cpp  TemperatureSensor.cpp  main.cpp
src/cli/: CliParser.cpp
src/factories/: MQTTTransportFactory.cpp  TemperatureSensorFactory.cpp
src/sensors/: SimulatedTemperatureSource.cpp  TemperatureSensor.cpp
src/transport/: MQTTTransport.cpp
